<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EjemploAgenda</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefonos">Números telefónicos</string>
    <string name="emails">Dir. de correo electrónico</string>
    <string name="msg_tels_empty">Sin teléfono</string>
    <string name="save">Guardar</string>
</resources>
